projects/compiler/test/typechecker/invocation/error_expr_too_many_args.abra
func foo(fn: (Int) => Int): Int = fn(1, "abc")
